# lobot

./: .env.template  .gitignore  README.md  SETUP_COMPLETE.md  data.txt  demo.py  extracted_acts.json  faiss_demo.py  main.py  pyproject.toml  resources.docx  statement.docx  test_system.py
db/: chroma.sqlite3
db_faiss/: companies_act.faiss  companies_act_meta.pkl  customs_trade.faiss  customs_trade_meta.pkl  general.faiss  general_meta.pkl  rbi_fema_meta.pkl  sebi_meta.pkl
src/: agents.py  faiss_db.py  legal_reasoning.py  rag_tools.py  tasks.py  vector_db.py
src/scraping/: README.md  cbic_fetch.py  extract_acts.py  fetch.sh  fetch_act_docs.py  rbi_fetch.py  remove_duplicates.py  sc_fetch.py
